<div class="mermaid">
erDiagram
    
    Manager {
        id varchar(255) PK
        username varchar(255) UK
        password varchar(255)
        role int
    }
    
    Restaurant {
        id varchar(255) PK
        name varchar(255)
        phone varchar(255) UK
        email varchar(255)
    }
    
    Branch {
        id varchar(255) PK
        location varchar(255)
    }
    
    Manager ||--o| Restaurant : manages
    Restaurant ||--|{ Branch : has
    Manager ||--o| Branch : manages

</div>